--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <!--agrega imagenes a la pagina y permite modificar el ancho y el alto de la misma-->
         <!--el alt es una descripcion de la imagen-->
 
-        <h6>Tarea de la semana 1, HTML, GIT y GITHUB</h6>
+        <h6>Tarea de la semana 1, HTML, GIT y GITHUB</h6> 
+        <!-- h6 es el encabezado mas chico -->
 </body> 
 </html>
