--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         <!--el alt es una descripcion de la imagen-->
 
         <h6>Tarea de la semana 1, HTML, GIT y GITHUB</h6> 
-        <!-- h6 es el encabezado mas chico -->
+        <!-- h6 es el encabezado mas chico y h1 el mas grande -->
 </body> 
 </html>
